@@ -17,10 +17,6 @@ addons:
     - libattr1-dev
     - libsqlite3-dev
     - libjs-sphinxdoc
-    - texlive-latex-base
-    - texlive-latex-recommended
-    - texlive-latex-extra
-    - texlive-fonts-recommended
     - python3-pip
     - python3-setuptools
     - ninja-build
